# betting-mkt-data

./: .gitignore  AGENTS.md  DEV-README.md  Dockerfile  README.md  config.yaml  dev-workflow.sh  pyproject.toml  run.py
.roo/rules/: rules.md
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
dev-docs/: TASKS.md  cheatsheet-git-branches.md  cheatsheet-uv.md  task-scheduler-implementation.md
dev-docs/guides/: draftkings-api-navigation.md
dev-docs/references/: git-workflow.md  task-template-refinement.md
dev-docs/work-logs/: 2025-12-05-fix-critical-issues.md  2025-12-05-template-refinement.md  TEMPLATE.md
docker/: Dockerfile
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DATA-EXTRACTION.md  DATABASE.md  DEPLOYMENT.md  PROVIDERS.md  TROUBLESHOOTING.md
scripts/: discover_all_subcategories.py  discover_subcategories.py  dump_manifest.py  dump_template.py  export_lines.py  inspect_template.py  probe_categories.py  search_manifest.py  show_lines.py  test_fetch.py  verify_extraction.py  verify_props.py
src/: betting_markets.db
src/api/: factory.py  routes.py
src/betting_markets.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/core/: config.py  database.py  headers.py  (+6 more)
tests/: conftest.py  manual_test_dk_dynamic.py  test_api.py  test_dk_dynamic_games.py  test_dk_dynamic_games_v2.py  test_dk_integration.py  test_dk_nfl_games.py  test_draftkings_client_config.py  test_draftkings_integration.py  test_nfl_props_extraction.py  test_scheduler.py  verify_config_loading.py
(+21 files in other folders)
